--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 			<li>Serviços</li>
 			<li>Portifólio</li>
 			<li>Contato</li>
-
 		
+		<p>Prestamos serviços nas mais diversas áreas do meio digital.</p>
+		<p>Com um olhar critico entregamos ótimos trabalhos graficos e de edições nas mais variadas formas.</p>
+		<p>Entregamos todo trabalho por meio de Email.</p>
 
 
 		</body>
