Enviando alterações de css

--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 		
 		<body>
 
-			<img src="imagens/logotr.png">
-			<img src="imagens/logmatrix.png">
-			<big>Tauro Ribeiro</big>		
+			<header>
+				<img src="imagens/logotr.png">
+				<big>Tauro Ribeiro</big>		
 			 
-			<li>Home</li>
-			<li>Serviços</li>
-			<li>Portifólio</li>
-			<li>Contato</li>
+			 <nav>
+				<ul>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="serviços.html">Serviços</a></li>
+					<li><a href="protifolio.html">Protifólio</a></li>
+					<li><a href="contato.html">Contato</a></li>
+			    </ul>
+			 </nav>	
+			</header>
 		
 		<p>Prestamos serviços nas mais diversas áreas do meio digital.</p>
 		<p>Com um olhar critico entregamos ótimos trabalhos graficos e de edições nas mais variadas formas.</p>
