novos estilos css do curso aplicados

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<head>
 			<meta charset="utf-8">
 			<title>Tauro Ribeiro</title>
+			<link rel="stylesheet" href="reset.css">
 			<link rel="stylesheet" href="css/home.css">
 			
 		</head>
@@ -10,17 +11,19 @@
 		<body>
 
 			<header>
-				<img src="imagens/logotr.png">
-				<big>Tauro Ribeiro</big>		
+				<div class="caixa">
+					<img src="imagens/logotr.png">
+					<big>Tauro Ribeiro</big>		
 			 
-			 <nav>
-				<ul>
-					<li><a href="home.html">Home</a></li>
-					<li><a href="serviços.html">Serviços</a></li>
-					<li><a href="protifolio.html">Protifólio</a></li>
-					<li><a href="contato.html">Contato</a></li>
-			    </ul>
-			 </nav>	
+			 		<nav>
+						<ul>
+							<li><a href="home.html">Home</a></li>
+							<li><a href="serviços.html">Serviços</a></li>
+							<li><a href="protifolio.html">Protifólio</a></li>
+							<li><a href="contato.html">Contato</a></li>
+			    		</ul>
+			 		</nav>
+			 	</div>
 			</header>
 		
 		<p>Prestamos serviços nas mais diversas áreas do meio digital.</p>
