correcao de assento

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					
 					<li>
 						<h2>Edições</h2>
-						<img src="imagens/edição.jpg">
+						<img src="imagens/edicao.jpg">
 						<p class="serviço-descrição">Edições de Fotos Videos e Templeites para projetos.</p>
 						<P class="serviço-preço">Apartir de R$:50,00</P>
 					</li>
